# shortcut-mapper

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  README.org  makefile  requirements.org
src/: CMakeLists.txt  key_map_loader.cpp  key_map_node.cpp  key_mapper.cpp  utils.cpp
src/headers/: key_map_loader.hpp  key_map_node.hpp  key_mapper.hpp  utils.hpp
template/: key-map  key_map
